--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,6 +1,9 @@
-<h1>restaurants list</h1>
-
-<% @restaurants.each do |restaurant| %>
-  <h2><%=restaurant.name%></h2>
-<% end %>
-
+<div class="container">
+  <h1>Restaurants list</h1>
+<ul class ="list-group">
+  <% @restaurants.each do |restaurant| %>
+    <li><%=link_to restaurant.name, restaurant_path(restaurant) %></li>
+  <% end %>
+</ul>
+  <%= link_to "Create a new restaurant", new_restaurant_path %>
+</div>
